# cave-light-sensor

./: .test_main.rs  Cargo.toml  Embed.toml  NOTES.md  README.md
.cargo/: config
common-data/: Cargo.toml
common-data/src/: event.rs  lib.rs  request.rs  response.rs
electronics/: BOM  notes.md
link-lib/: Cargo.toml
link-lib/src/: async_link.rs  bus_message.rs  convertion.rs  embedded_link.rs  error.rs  event.rs  input_buffer.rs  lib.rs  messages_enums.rs  request.rs  response.rs
sensor/: Cargo.toml  Embed.toml  NOTES.md  rust-toolchain  rustfmt.toml
sensor-data-extractor/: Cargo.toml  notes.md  rustfmt.toml
sensor-data-extractor-iced/: Cargo.toml  DEVNOTES.md
sensor-data-extractor-iced/src/: main.rs  serialport.rs  ui.rs
sensor-data-extractor/src/: async_runtime.rs  commands.rs  main.rs  messages.rs  serial.rs  serial_messages.rs  ui.rs
sensor-data-extractor/src/ui/: baud_rate.rs  command_selector.rs  serial_selector.rs
sensor/src/: cfg.rs  eeprom.rs  light_sensor.rs  main.rs  tasks.rs
sensor/src/storage/: eeprom.rs  event.rs  event_storage.rs  mod.rs
sensor/src/tasks/: light_interrupt.rs  mod.rs  uart_interrupt.rs
src/: eeprom.rs  light_sensor.rs  main.rs  rtc.rs
