[package]
name = "cave-light-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version ="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.4.0" }
rtic = { version = "2.0.0", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick"]}
stm32l0xx-hal = { version = "0.10.0", features = ["rt", "mcu-STM32L011K4Tx"] }


[profile.dev]
opt-level = 1
debug = false
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 'z'
debug = false
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

