[package]
name = "cave-light-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version ="0.7.7", features = ["critical-section-single-core"]}
#cortex-m-rt = "0.7.3"
#embedded-hal = "0.2.7"
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.4.0" }
rtic = { version = "2.0.0", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick"]}
stm32l0xx-hal = { version = "0.10.0", features = [ "mcu-STM32L011K4Tx"] }
opt300x = "0.1.1"
embedded-time = "0.12.1"
#nb = "1.1.0"
panic-abort = "0.3.2"
#embedded-sdmmc = {version = "0.5.0",  default-features = false}
#panic-reset = "0.1.1"
#panic-never = "0.1.0"

[profile.dev]
opt-level = 1
strip = true
debug = false
split-debuginfo = 'off'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

