[package]
name = "common-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.8", features = ["use-crc","experimental-derive"] }
serde = { version = "1.0.196", default-features = false, features = ["serde_derive"] }
