[package]
name = "link-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm l

[dependencies]
base64 = { version = "0.21.3", default-features = false }
crc = "3.0.1"
heapless = "0.7.16"
postcard = { version = "1.0.6", features = ["use-crc","experimental-derive"] }
#regex-lite = { version = "0.1.0", default-features = false }
serde = { version = "1.0.188", default-features = false, features = ["serde_derive"] }
