[package]
name = "link-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm l

[dependencies]
embedded-hal =  { version = "0.2.3", optional = true }
heapless = "0.7.0"
nb = { version = "1.1.0", optional = true }
postcard = { version = "1.0.8", features = ["use-crc","experimental-derive"] }
serde = { version = "1.0.196", default-features = false, features = ["serde_derive"] }
tokio = { version = "1.36.0", features = ["io-util"], optional = true }

[features]
# Defines a feature named `webp` that does not enable any other features.
embedded = ["dep:embedded-hal", "dep:nb"]
async = ["dep:tokio"]