[package]
name = "sensor-data-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link-lib = { path = "../link-lib" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
egui = "0.23.0"
eframe = "0.23.0"
env_logger = "0.10.0"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
