[package]
name = "cave-light-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version ="0.7.7", features = ["critical-section-single-core"]}
#cortex-m-rt = "0.7.3"
#embedded-hal = "0.2.7"
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.4.0" }
rtic = { version = "2.0.0", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick"]}
stm32l0xx-hal = { version = "0.10.0", features = [ "mcu-STM32L011K4Tx"] }
opt300x = "0.1.1"
embedded-time = "0.12.1"
nb = "1.1.0"
panic-abort = "0.3.2"
eeprom24x = "0.6.0"
shared-bus = { version = "0.3.0", features = ["cortex-m"]}
serde = { version = "1.0.171", default-features = false }
postcard = "1.0.4"
chrono = { version = "0.4.26", default-features = false }
ufmt = "0.2.0"
link-lib = { path = "../link-lib" }
heapless = "0.7.16"

[profile.dev]
opt-level = 's'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
